feat: Added Employees Service
